show active devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set (CMAKE_BUILD_DIRECTORY ./build)
 
 include_directories(pcap_include)
 add_executable(tcpdump1 main.c)
+target_link_libraries(tcpdump1 libpcap.a)
