arr_ptr is sent to other thread as var in pthread_create. variable is not updated properly between threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,4 @@ set (CMAKE_BUILD_DIRECTORY ./build)
 
 add_compile_options(-g3 -Wall)
 add_executable(tcpdump1 main.c functions.c)
+target_link_libraries(tcpdump1 pthread)
