added filter setup. at the moment,after updates, program causes a segmentation fault.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,11 @@
 CFLAGS+=-g3 -Wall -I../include_pcap -I../include
 LDFLAGS+=-L../
-LDLIBS+=-l:libpcap.a
+
+.PHONY: all
+all: filter.o functions.o
+
+filter.o:	filter.c
+	$(CC) -c $(CFLAGS) -o $@ $^
 
 functions.o:	functions.c
 	$(CC) -c $(CFLAGS) -o $@ $^
